--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
-    "axios": "^1.4.0",
+    "@splidejs/splide": "^4.1.4",
+    "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "core-js": "^3.29.0",
     "echarts": "^5.4.3",
     "roboto-fontface": "*",
+    "vee-validate": "^4.5.8",
     "vue": "^3.2.0",
     "vue-chartjs": "^5.2.0",
-    "vue-echarts": "^6.6.0",
+    "vue-echa rts": "^6.6.0",
     "vue-router": "^4.0.0",
-    "vuetify": "^3.3.7",
+    "vuetify": "^3.3.23",
     "vuex": "^4.0.2",
     "webfontloader": "^1.0.0"
   },
